# neural-network-optimization

./: .gitignore  CMakeLists.txt  README.md  configure
include/models/: MLModel.hpp  MLModel.ipp  data_manager.hpp  data_manager.ipp  iris_data_manager.hpp  iris_data_manager.ipp  neural_network_model.hpp  neural_network_model.ipp
include/optimization/: activation.hpp  kFold.hpp  nn.hpp  optimization.hpp
src/: CMakeLists.txt  activation.cpp  kFold.cpp  nn.cpp  optimization.cpp
test/: CMakeLists.txt  bench_optimization.cxx  evaluate_iris_classifier.cxx  integration_optimization.cxx  test_optimization.cxx
